--- a/day-6/solution.ipynb
+++ b/day-6/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "38b405bd-e338-4e46-815e-0676898a7e41",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "5030"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bec4eb5f-acc9-4819-810a-fdd91f9d9019",
    "metadata": {},
    "outputs": [],
@@ -150,17 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "20f15c6b-a354-413d-b0a4-9d8ed79858e9",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Count: 2138\n"
+      "Count: 1998\n"
      ]
     }
    ],
@@ -236,7 +234,7 @@
     "    clone[ny][nx] = \"O\"\n",
     "    cx, cy = x, y\n",
     "    # print(render_matrix(clone))\n",
-    "    for i in range(500):\n",
+    "    for i in range(20000):\n",
     "        cx, cy, direction =  get_corner(clone, cx, cy, direction)\n",
     "\n",
     "        # print(cx, cy, direction)\n",
@@ -252,6 +250,7 @@
     "        if index > 1:\n",
     "            # print(corners)\n",
     "            if \":\".join(corners[0]).endswith(\":\".join(corners[1])):\n",
+    "                \n",
     "                return nx, ny, True, corners[0]\n",
     "            else:\n",
     "                # print(corners)\n",
@@ -301,7 +300,7 @@
     "    return placement\n",
     "\n",
     "\n",
-    "out = \"\"\n",
+    "variants = \"\"\n",
     "\n",
     "matrix = get_matrix(content)\n",
     "placements = get_placement(matrix)\n",
@@ -312,19 +311,18 @@
     "    matrix = get_matrix(content)\n",
     "    matrix[y][x] = \"O\"\n",
     "    matrix = visualize(matrix, corners)\n",
-    "    out += f\"Loop {count}\\n\" + render_matrix(matrix) + \"\\n\\n\"\n",
+    "    variants += f\"Loop {count}\\n\" + render_matrix(matrix) + \"\\n\\n\"\n",
     "    \n",
     "with open(\"out.txt\", \"w\") as f:\n",
-    "    f.write(out)\n",
+    "    f.write(variants)\n",
     "\n",
-    "# matrix = get_matrix(content)\n",
-    "# placements = get_placement(matrix)\n",
     "# final = get_matrix(content)\n",
     "# for x, y, corners in placements:\n",
     "#     final[y][x] = \"O\"\n",
     "#     visualize(get_matrix(content), corners)\n",
+    "# print(render_matrix(final))\n",
     "\n",
-    "print(f\"Count: {len(placements)}\")"
+    "print(f\"Count: {len(set([f'{value[0]},{value[1]}' for value in placements]))}\")"
    ]
   },
   {
@@ -336,8 +334,8 @@
     "\n",
     "- 1156 - That's not the right answer; your answer is too low\n",
     "- 1883 - That's not the right answer; your answer is too low.\n",
-    "- 2057?\n",
-    "- 2124?\n",
+    "\n",
+    "- 1998 - That's not the right answer.\n",
     "- 2138 - That's not the right answer; your answer is too high."
    ]
   },
