--- a/day-6/solution.ipynb
+++ b/day-6/solution.ipynb
@@ -335,6 +335,7 @@
     "- 1156 - That's not the right answer; your answer is too low\n",
     "- 1883 - That's not the right answer; your answer is too low.\n",
     "\n",
+    "- 1997 - That's not the right answer.\n",
     "- 1998 - That's not the right answer.\n",
     "- 2138 - That's not the right answer; your answer is too high."
    ]
