--- a/day-11/solution.ipynb
+++ b/day-11/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1008a334-bcb9-44df-8edd-809c583641b8",
    "metadata": {},
    "outputs": [
@@ -12,13 +12,14 @@
        "203228"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import functools\n",
+    "from collections import defaultdict\n",
     "\n",
     "def show(numbers):\n",
     "    print(\" \".join([str(number) for number in numbers]))\n",
@@ -62,33 +63,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "130ce976-92e4-40c4-b2ba-0f317f3c1658",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m stones \u001b[38;5;241m=\u001b[39m get_stones(content)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m75\u001b[39m):\n\u001b[0;32m----> 4\u001b[0m     out \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m number \u001b[38;5;129;01min\u001b[39;00m stones:\n\u001b[1;32m      6\u001b[0m         out\u001b[38;5;241m.\u001b[39mextend(apply(number))\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "203228"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "def get_initial_state(stones: list[tuple]):\n",
+    "    out = defaultdict(int)\n",
+    "\n",
+    "    for stone in stones:\n",
+    "        out[stone] += 1\n",
+    "    return out\n",
+    "\n",
+    "def apply_rules(stone, count, accumulator):\n",
+    "    if stone == 0:\n",
+    "        accumulator[1] += count\n",
+    "        return accumulator\n",
+    "\n",
+    "    if len(str(stone)) % 2 == 0:\n",
+    "        n = str(stone)\n",
+    "        first = int(n[0:round(len(n)/2)])\n",
+    "        second = int(n[round(len(n)/2):])\n",
+    "        accumulator[first] += count\n",
+    "        accumulator[second] += count\n",
+    "        return accumulator\n",
+    "\n",
+    "    accumulator[stone * 2024] += count\n",
+    "\n",
+    "    return accumulator\n",
+    "\n",
     "stones = get_stones(content)\n",
     "\n",
-    "for i in range(75):\n",
-    "    out = []\n",
-    "    for number in stones:\n",
-    "        out.extend(apply(number))\n",
-    "    stones = [*out]\n",
+    "result = get_initial_state(stones)\n",
     "\n",
-    "len(stones)\n",
-    "# does not work yet"
+    "for i in range(25):\n",
+    "    new = defaultdict(int)\n",
+    "    for stone, count in result.items():\n",
+    "        new = apply_rules(stone, count, new)\n",
+    "        # if stone == 0:\n",
+    "        #     new[1] += count\n",
+    "        #     continue\n",
+    "\n",
+    "        # if len(str(stone)) % 2 == 0:\n",
+    "        #     n = str(stone)\n",
+    "        #     first = int(n[0:round(len(n)/2)])\n",
+    "        #     second = int(n[round(len(n)/2):])\n",
+    "        #     new[first] += count\n",
+    "        #     new[second] += count\n",
+    "        #     continue\n",
+    "\n",
+    "        # new[stone * 2024] += count\n",
+    "    result = new\n",
+    "\n",
+    "sum(result.values())"
    ]
   },
   {
