--- a/day-12/solution.ipynb
+++ b/day-12/solution.ipynb
@@ -88,7 +88,7 @@
     "    regions = []\n",
     "    \n",
     "    for y in range(len(matrix)):\n",
-    "        for x in range(len(matrix)):\n",
+    "        for x in range(len(matrix[y])):\n",
     "            if (x,y) in seen:\n",
     "                continue\n",
     "            region = get_region(matrix, (x,y))\n",
@@ -122,197 +122,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c64a3697-9658-410c-b71a-251c3c002072",
+   "execution_count": 3,
+   "id": "0cf55c81-1b07-42f0-b2e1-7388144455b6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sides=4 len(region)=8\n",
-      "sides=14 len(region)=35\n",
-      "sides=4 len(region)=1\n",
-      "sides=18 len(region)=31\n",
-      "sides=4 len(region)=1\n",
       "\n",
-      "price=1088\n",
-      "\n",
-      "\u001b[32mV\u001b[39m\u001b[32mV\u001b[39m\u001b[32mV\u001b[39m\u001b[32mV\u001b[39m\u001b[32mV\u001b[39m\u001b[32mV\u001b[39m\u001b[32mV\u001b[39m\u001b[32mV\u001b[39mLLLLLLLLLL\n",
-      "\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[33mN\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39mIIIIIIII\n",
-      "\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[35mQ\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39mIIIIIIII\n",
-      "\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39mIIIIIIIII\n",
-      "\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39mIIIIIIIII\n",
-      "\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39mIIIIIIIII\n",
-      "\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39mIIIIPII\n",
-      "\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[31mC\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39m\u001b[34mB\u001b[39mIIIIPPII\n"
+      "price=859494\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from colorama import Fore, Style\n",
     "from itertools import cycle\n",
+    "from colorama import Fore\n",
     "\n",
     "def render_matrix(matrix):\n",
     "    return \"\\n\".join([\"\".join(line) for line in matrix])\n",
     "\n",
-    "def get_outer_blocks(region: list[int]):\n",
-    "    outer = []\n",
-    "    perimeter = 0\n",
-    "    for x,y in region:\n",
-    "        count = 4\n",
-    "        edges = [\n",
-    "            (x-1, y),\n",
-    "            (x+1, y),\n",
-    "            (x, y-1),\n",
-    "            (x, y+1)\n",
-    "        ]\n",
-    "        \n",
-    "        for edge in edges:\n",
-    "            if edge in region:\n",
-    "                count -= 1\n",
+    "def get_x_axis(region, y):\n",
+    "    return [point[0] for point in filter(lambda point: point[1] == y, region)]\n",
     "\n",
-    "        if count != 0:\n",
-    "            outer.append((x,y))\n",
-    "    return outer\n",
+    "def get_y_axis(region, x):\n",
+    "    return [point[1] for point in filter(lambda point: point[0] == x, region)]\n",
     "\n",
+    "def get_sides(region):\n",
     "\n",
-    "def get_next_step(x, y, position):\n",
-    "    if position == \"^\":\n",
-    "        return x, y-1\n",
-    "    \n",
-    "    elif position == \">\":\n",
-    "        return x+1, y\n",
-    "        \n",
-    "    elif position == \"<\":\n",
-    "        return x-1, y\n",
-    "        \n",
-    "    elif position == \"v\":\n",
-    "        return x, y+1\n",
+    "    def get_horizontal(region, y, diff):\n",
+    "        x_axis = get_x_axis(region, y)\n",
+    "        sides = 0\n",
+    "        side_present = False\n",
+    "        for x in range(min(x_axis)-1, max(x_axis)+2):\n",
+    "            if (x,y) in region and (x,diff) not in region:\n",
+    "                side_present = True\n",
+    "                continue\n",
+    "\n",
+    "            if (x,y) in region and (x,diff) in region:\n",
+    "                if side_present:\n",
+    "                    sides += 1\n",
+    "                    side_present = False\n",
+    "                continue\n",
+    "\n",
+    "            if (x,y) not in region:\n",
+    "                if side_present:\n",
+    "                    sides += 1\n",
+    "                    side_present = False\n",
+    "        return sides\n",
     "\n",
     "\n",
-    "def get_turn_position(current):\n",
-    "    return {\n",
-    "        \"^\": \"<\",\n",
-    "        \">\": \"^\",\n",
-    "        \"v\": \">\",\n",
-    "        \"<\": \"v\"\n",
-    "    }[current]\n",
+    "    def get_vertical(region, x, diff):\n",
+    "        y_axis = get_y_axis(region, x)\n",
+    "        sides = 0\n",
+    "        side_present = False\n",
     "\n",
-    "def get_new_position(current):\n",
-    "    directions = [\"^\", \">\", \"v\", \"<\", \"^\"]\n",
-    "    return directions[directions.index(current)+1]\n",
+    "        for y in range(min(y_axis)-1, max(y_axis)+2):\n",
+    "            if (x,y) in region and (diff,y) not in region:\n",
+    "                side_present = True\n",
+    "                continue\n",
     "\n",
-    "def find_region_boundaries(region):\n",
+    "            if (x,y) in region and (diff,y) in region:\n",
+    "                if side_present:\n",
+    "                    sides += 1\n",
+    "                    side_present = False\n",
+    "                continue\n",
+    "\n",
+    "            if (x,y) not in region:\n",
+    "                if side_present:\n",
+    "                    sides += 1\n",
+    "                    side_present = False\n",
+    "        return sides\n",
+    "\n",
     "    x_values, y_values = zip(*region)\n",
-    "    return (min(x_values), max(x_values)),(min(y_values), max(y_values)),\n",
-    "\n",
-    "def find_first_point(region):\n",
-    "    x_values, y_values = zip(*region)\n",
-    "    top_y = min(y_values)\n",
-    "    top_x = min([point[0] if point[1] == top_y else max(x_values) for point in region])\n",
-    "    return top_x, top_y\n",
-    "\n",
-    "def find_sides(region):\n",
-    "    first_point = find_first_point(region)\n",
-    "    x, y = first_point\n",
-    "    # region = get_outer_blocks([*region])\n",
-    "    # print(f\"{region=}\")\n",
-    "    position = \"^\"\n",
     "    sides = 0\n",
-    "    steps = []\n",
-    "    cx,cy = x, y\n",
-    "    count = 0\n",
-    "    while True:\n",
-    "        nx,ny = cx,cy\n",
+    "    for y in range(min(y_values), max(y_values)+1):\n",
+    "        x_top = get_horizontal(region, y, y-1)\n",
+    "        x_bottom = get_horizontal(region, y, y+1)\n",
+    "        sides += (x_top + x_bottom)\n",
     "\n",
-    "        if count > 0 and (cx, cy) == first_point and position == \"^\":\n",
-    "            # print(\"❌ End\")\n",
-    "            break\n",
-    "\n",
-    "        count += 1\n",
-    "\n",
-    "        steps.append((cx,cy))\n",
-    "        # print(f\"{cx=} {cy=} {position=} {sides=}\")\n",
-    "        \n",
-    "        # Turn on left\n",
-    "        tx,ty = get_next_step(cx,cy, get_turn_position(position))\n",
-    "        if (tx,ty) in region:\n",
-    "            position = get_turn_position(position)\n",
-    "            sides += 1\n",
-    "            cx,cy = tx,ty\n",
-    "            # print(\"🔥 Side detected\")\n",
-    "            continue\n",
-    "        \n",
-    "        nx,ny = get_next_step(nx,ny, position)\n",
-    "\n",
-    "        if (nx,ny) not in region:\n",
-    "            position = get_new_position(position)\n",
-    "            sides += 1\n",
-    "            # print(\"🟡 Regular turn\")\n",
-    "            continue\n",
-    "\n",
-    "        cx,cy = nx,ny\n",
-    "\n",
-    "    # print(f\"{sides=}\")\n",
-    "    return sides\n",
+    "    for x in range(min(x_values), max(x_values)+1):\n",
+    "        y_left = get_vertical(region, x, x-1)\n",
+    "        y_right = get_vertical(region, x, x+1)\n",
+    "        sides += (y_left + y_right)\n",
     "    \n",
-    "\n",
-    "# garden = \"\"\"\n",
-    "# ..................\n",
-    "# ......XXXXXXX.....\n",
-    "# ....XXXXXX........\n",
-    "# ......XXXXXXX.....\n",
-    "# ......XXXX........\n",
-    "# .........XX.......\n",
-    "# ..................\n",
-    "# \"\"\".strip()\n",
+    "    return sides\n",
     "\n",
     "\n",
-    "# garden = \"\"\"\n",
-    "# ......................\n",
-    "# ........OOOOOOO.......\n",
-    "# ........O.............\n",
-    "# ........OOOO..........\n",
-    "# ........O........XXX..\n",
-    "# ........OOOOOOO...XXX.\n",
-    "# ..........X........X..\n",
-    "# \"\"\".strip()\n",
-    "\n",
-    "garden = \"\"\"\n",
-    "VVVVVVVVLLLLLLLLLL\n",
-    "CCCCCNBBBBIIIIIIII\n",
-    "CCCCQBBBBBIIIIIIII\n",
-    "CCCCCBBBBIIIIIIIII\n",
-    "CCCCBBBBBIIIIIIIII\n",
-    "CCCCCBBBBIIIIIIIII\n",
-    "CCCCCBBBBBBIIIIPII\n",
-    "CCCCCCCBBBIIIIPPII\n",
-    "\"\"\".strip()\n",
-    "\n",
-    "# with open(\"input.txt\", \"r\") as f:\n",
-    "#     garden = f.read().strip()\n",
-    "\n",
+    "with open(\"input.txt\", \"r\") as f:\n",
+    "    garden = f.read().strip()\n",
     "\n",
     "matrix = get_matrix(garden)\n",
     "regions = get_regions(matrix)\n",
-    "\n",
-    "colors = cycle([Fore.GREEN, Fore.RED, Fore.YELLOW, Fore.BLUE, Fore.MAGENTA, Fore.CYAN, Fore.BLACK])\n",
+    "colors = cycle([Fore.GREEN, Fore.RED, Fore.YELLOW, Fore.BLUE, Fore.MAGENTA, Fore.CYAN,  Fore.BLACK])\n",
     "\n",
     "price = 0\n",
     "for i, region in enumerate(regions):\n",
     "    color = next(colors)\n",
+    "    x,y = region[0]\n",
+    "    char = matrix[y][x]\n",
+    "    \n",
     "    for x,y in region: # get_outer_blocks(region):\n",
     "        matrix[y][x] = color + matrix[y][x] + Fore.RESET\n",
     "\n",
-    "    sides = find_sides(region)\n",
-    "    print(f\"{sides=} {len(region)=}\")\n",
+    "    sides = get_sides(region)\n",
+    "\n",
+    "    # print(f\"{char=} {outer_sides=} {inner_sides=} {len(region)=}\")\n",
     "    price += sides * len(region)\n",
     "\n",
     "print()\n",
     "print(f\"{price=}\")\n",
     "print()\n",
-    "print(render_matrix(matrix))"
+    "# print(render_matrix(matrix))"
    ]
   },
   {
@@ -320,18 +242,14 @@
    "id": "57f11dbd-4473-4b30-bd84-2061cce1a734",
    "metadata": {},
    "source": [
-    "# Incorrect\n",
+    "# Attempts\n",
     "\n",
-    "- `836380` That's not the right answer; your answer is too low."
+    "- `836380` That's not the right answer; your answer is too low.\n",
+    "- `859494` **Correct!**\n",
+    "- `899958` That's not the right answer; your answer is too high.\n",
+    "- `919798` \n",
+    "- `2317362` That's not the right answer; your answer is too high."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0940625-0d83-4b5e-b319-6e7b3ee0bb99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
