--- a/day-13/solution.ipynb
+++ b/day-13/solution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "9b7edba4-6f87-4100-8747-a145876f5c36",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
     "    try:\n",
     "        A, B = calculate_presses(arcade)\n",
     "        prizes += 1\n",
-    "        if A> 99 or B > 99:\n",
+    "        if A > 99 or B > 99:\n",
     "            print(f\"{A=} {B=}\")\n",
     "        tokens += calc_tokens(A, B)\n",
     "    except ValueError:\n",
@@ -138,6 +138,58 @@
    "source": [
     "Correct: `29388`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1c34ecf5-19b0-4c7d-abcf-fb2b76f973cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prizes=175 int(tokens)=99548032866004\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"input.txt\", \"r\") as f:\n",
+    "    arcades = f.read().strip()\n",
+    "\n",
+    "adjustment = 10000000000000\n",
+    "\n",
+    "prizes = 0\n",
+    "tokens = 0\n",
+    "for i, arcade in enumerate(parse(arcades)):\n",
+    "    px, py = arcade[\"prize\"]\n",
+    "    arcade[\"prize\"] = (px + adjustment, py + adjustment)\n",
+    "    \n",
+    "    try:\n",
+    "        A, B = calculate_presses(arcade)\n",
+    "        prizes += 1\n",
+    "        tokens += calc_tokens(A, B)\n",
+    "    except ValueError:\n",
+    "        continue\n",
+    "\n",
+    "print(f\"{prizes=} {int(tokens)=}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "def8f534-52ab-4880-b989-d945bd83b026",
+   "metadata": {},
+   "source": [
+    "Correct: `99548032866004` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086b94de-fd21-46e0-b476-5115187286f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
