Solves day 9 part 2

--- a/day-9/solution.ipynb
+++ b/day-9/solution.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ea4f23e8-a855-4131-9fdd-a0ea5877c0b9",
+   "metadata": {},
+   "source": [
+    "# Disk Fragmenter"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "93fdeef6-057e-400a-b65b-27b2cdeaa032",
    "metadata": {},
    "outputs": [
@@ -12,7 +20,7 @@
        "6288599492129"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +77,7 @@
     "blocks = get_blocks(disk_map)\n",
     "moved_blocks = move_file_blocks(blocks)\n",
     "\n",
-    "calc_checksum(moved_blocks)        "
+    "calc_checksum(moved_blocks)"
    ]
   },
   {
@@ -82,28 +90,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b8f7aa75-8edd-4c8b-a880-c2dd07f270e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6421391962883"
+       "6321896265143"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from colorama import Fore\n",
+    "\n",
     "def visualise(blocks: tuple[int]):\n",
     "    print(\"\".join([chr(block) if block > 9 else str(block) if block > -1 else \".\" for block in blocks]))\n",
     "\n",
     "\n",
     "def show_fs(fs):\n",
-    "    visualise(get_blocks_from_fs(fs))\n",
+    "    out = \"\"\n",
+    "    for item in fs:\n",
+    "        blocks = [item[\"value\"]] * item[\"len\"]\n",
+    "        value = \"\".join([chr(block) if block > 9 else str(block) if block > -1 else \".\" for block in blocks])\n",
+    "        if item[\"stuck\"]:\n",
+    "            value = Fore.BLUE + value + Fore.RESET;\n",
+    "\n",
+    "        if item[\"moved\"]:\n",
+    "            value = Fore.RED + value + Fore.RESET;\n",
+    "        out += value\n",
+    "    print(out)\n",
     "\n",
     "def get_fs(blocks: list[int]):\n",
     "    fs = []\n",
@@ -121,7 +141,6 @@
     "            following = None\n",
     "\n",
     "        defaults = {\n",
-    "            # \"block_index\": index,\n",
     "            \"len\": count,\n",
     "            \"moved\": False,\n",
     "            \"stuck\": False\n",
@@ -155,8 +174,8 @@
     "\n",
     "\n",
     "def move_fs(fs, free_index, file_index):\n",
-    "    free = {**fs[free_index]}\n",
-    "    file = {**fs[file_index]}\n",
+    "    free = fs[free_index]\n",
+    "    file = fs[file_index]\n",
     "    \n",
     "    moved_file = {\n",
     "        **file,\n",
@@ -166,7 +185,8 @@
     "        **file,\n",
     "        \"type\": \"free\",\n",
     "        \"value\": EMPTY_BLOCK,\n",
-    "        \"moved\": False\n",
+    "        \"moved\": False,\n",
+    "        \"stuck\": False\n",
     "    }\n",
     "    \n",
     "    fs[free_index] = moved_file\n",
@@ -182,11 +202,8 @@
     "\n",
     "def defragment(fs):\n",
     "    reset = False\n",
-    "    counter = 0\n",
-    "    free_index = 0\n",
     "    while True:\n",
     "        changed = False\n",
-    "        counter += 1\n",
     "        for rwd_idx in range(len(fs)-1, 0, -1):\n",
     "            if changed:\n",
     "                break\n",
@@ -209,8 +226,9 @@
     "                    fs = move_fs(fs, fwd_idx, rwd_idx)\n",
     "                    changed = True\n",
     "                    break\n",
+    "            else:\n",
+    "                fs[rwd_idx][\"stuck\"] = True\n",
     "\n",
-    "            fs[rwd_idx][\"stuck\"] = True\n",
     "        # show_fs(fs)\n",
     "        if not changed:\n",
     "            break\n",
@@ -225,14 +243,10 @@
     "    layout = f.read()\n",
     "\n",
     "disk_map = get_disk_map(layout)\n",
+    "\n",
     "blocks = get_blocks(disk_map)\n",
     "# visualise(blocks)\n",
-    "# defraged = defragment(blocks)\n",
-    "# visualise(defraged)\n",
-    "# calc_checksum(defragment(blocks))\n",
     "\n",
-    "# print(blocks)\n",
-    "# print(get_blocks_from_fs(get_fs(blocks)))\n",
     "updated_blocks = get_blocks_from_fs(defragment(get_fs(blocks)))\n",
     "# print(updated_blocks)\n",
     "\n",
@@ -244,13 +258,11 @@
    "id": "21ba07ad-9887-4f23-8960-c42bc35366a8",
    "metadata": {},
    "source": [
-    "# Incorrect\n",
+    "# Attempts\n",
     "\n",
-    "\n",
-    "\n",
+    "- `6321896265143` - **Correct!**\n",
     "- `6410956071839` - That's not the right answer; your answer is too high.\n",
-    "- `6421391962883`\n",
-    "- `6789686496896`\n",
+    "- `6421391962883` - That's not the right answer\n",
     "- `9185413613196` - That's not the right answer; your answer is too high.\n",
     "- `10760448444221` - That's not the right answer; your answer is too high."
    ]
