--- a/day-6/solution.ipynb
+++ b/day-6/solution.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4b22013f-e677-456b-ae55-184980faecc3",
+   "metadata": {},
+   "source": [
+    "# Guard Gallivant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "38b405bd-e338-4e46-815e-0676898a7e41",
@@ -332,12 +340,12 @@
    "source": [
     "# Incorrect\n",
     "\n",
-    "- 1156 - That's not the right answer; your answer is too low\n",
-    "- 1883 - That's not the right answer; your answer is too low.\n",
+    "- `1156` - That's not the right answer; your answer is too low\n",
+    "- `1883` - That's not the right answer; your answer is too low.\n",
     "\n",
-    "- 1997 - That's not the right answer.\n",
-    "- 1998 - That's not the right answer.\n",
-    "- 2138 - That's not the right answer; your answer is too high."
+    "- `1997` - That's not the right answer.\n",
+    "- `1998` - That's not the right answer.\n",
+    "- `2138` - That's not the right answer; your answer is too high."
    ]
   },
   {
